# mb_pose_estimation

./: CMakeLists.txt  README.md  package.xml
action/: MBTrack.action
data/: calib_pattern.cao  calib_pattern.init  table.cao  table.init  wg_box.cao  wg_box.init
include/mb_pose_estimation/: mb_pose_estimation.h  template_matching.h  utils.h
src/: feature_matching.cpp  mb_pose_estimation.cpp  pose_estimation_client.cpp  pose_estimation_service.cpp  track_action_client.cpp  track_action_server.cpp  training_node.cpp  utils.cpp
srv/: PoseEstimation.srv
