<?xml version="1.0"?>
<package>
  <name>mb_pose_estimation</name>
  <version>0.0.1</version>
  <description>Model-based pose estimation and tracking for localized robots</description>
  <maintainer email="marioprats@gmail.com">Mario Prats</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>lima</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>lima</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
</package>


